# fullstack_football_shop_mini_app

./: DEPLOYMENT.md  Makefile  QUICKSTART.md  README.md  SERVER_SETUP.md  TROUBLESHOOTING.md  package-lock.json  pyproject.toml
backend/: README.md  pyproject.toml
backend/football_mini_app/: db_football_mini_app.sqlite3  manage.py
backend/football_mini_app/football_mini_app/: asgi.py  settings.py  settings_local.py  settings_prod.py  urls.py  wsgi.py
backend/football_mini_app/orders/: admin.py  models.py  serializers.py  urls.py  views.py
backend/football_mini_app/orders/migrations/: 0001_initial.py  0002_alter_order_options_alter_orderitem_options_and_more.py
backend/football_mini_app/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/football_mini_app/products/management/commands/: seed_products.py
backend/football_mini_app/products/migrations/: 0001_initial.py  0002_alter_product_condition.py  0003_alter_image_options_alter_product_options_and_more.py  0004_product_images_delete_image.py  0005_remove_product_images_image.py  0006_add_league_field.py
backend/football_mini_app/users/: admin.py  models.py  serializers.py  views.py
backend/football_mini_app/users/migrations/: 0001_initial.py  0002_user_first_name_user_last_name_user_phone_number_and_more.py
front/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
nginx/: rooneyform.ru.conf
scripts/: check_domain.sh  football_jerseys.csv  session_name.session  setup.sh  setup_hosts.sh  setup_nginx.sh  tg_channel_availability_to_csv.py
(+26 files in other folders)
