[tool.poetry]
name = "football-mini-app-backend"
version = "0.1.0"
description = "Django backend for Football Mini App"
authors = ["nikitas <n.kiselev2002@gmail.com>"]
readme = "README.md"
packages = [
    {include = "football_mini_app"}
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
djangorestframework = "^3.15.0"
django-cors-headers = "^4.3.1"
pillow = "^11.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
